# sideswap_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: connect.md  dealer.md
gdk_rust/gdk_common/: Cargo.toml
sideswap_amp/: Cargo.toml
sideswap_amp/src/: lib.rs  models.rs  sw_signer.rs  tests.rs  tx_cache.rs
sideswap_api/: Cargo.toml
sideswap_api/src/: connect_api.rs  fcm_models.rs  http_rpc.rs  lib.rs  mkt.rs  tests.rs
sideswap_client/: Cargo.toml  build.rs
sideswap_client/data/: assets-testnet.json  assets.json  update_assets.sh
sideswap_client/proto/: sideswap.proto
sideswap_client/src/: ffi.rs  gdk_json.rs  gdk_ses.rs  gdk_ses_amp.rs  gdk_ses_impl.rs  gdk_ses_rust.rs  lib.rs  models.rs  settings.rs  signer_server.rs  tests.rs  utils.rs  web_server.rs  worker.rs
sideswap_common/: Cargo.toml
sideswap_common/src/: cipher.rs  const_asset_id.rs  dealer_ticker.rs  debug_print.rs  env.rs  event_proofs.rs  float_utils.rs  gdk_registry_cache.rs  lib.rs  network.rs  network_fee.rs  network_fee_discount.rs  path_helpers.rs  pin.rs  price_stream.rs  pset.rs  pset_blind.rs  random_id.rs  rpc.rs  send_tx.rs  signals.rs  types.rs  utxo_select.rs  wallet_connect.rs  wallet_id.rs  wallet_key.rs  ws_client.rs
sideswap_dealer/: Cargo.toml  build.rs
sideswap_dealer/src/: dealer_rpc.rs  lib.rs  logs.rs  market.rs  price_stream.rs  signals.rs  utxo_data.rs
sideswap_dealer_amp/: Cargo.toml
sideswap_dealer_amp/config/: example.toml
sideswap_dealer_amp/src/: main.rs
sideswap_dealer_bitfinex/: Cargo.toml
sideswap_dealer_bitfinex/src/: balancing.rs  bfx_ws_api.rs  bitfinex_api.rs  bitfinex_worker.rs  external_prices.rs  main.rs
sideswap_dealer_elements/: Cargo.toml
sideswap_dealer_lwk/: Cargo.toml
sideswap_dealer_lwk/src/: main.rs
sideswap_jade/: Cargo.toml
sideswap_lwk/: Cargo.toml
sideswap_manager/: Cargo.toml  README.md
sideswap_monitoring/: Cargo.toml
sideswap_monitoring/src/: main.rs
sideswap_payjoin/: Cargo.toml
sideswap_payjoin/src/: lib.rs
sideswap_sdk_rust/: Cargo.toml
sideswap_sdk_rust/src/: connection.rs  lib.rs  mnemonic.rs
sideswap_types/: Cargo.toml
stableapp_api/: Cargo.toml
swaption_api/: Cargo.toml
(+111 files in other folders)
