[package]
name = "sideswap_api"
version = "0.1.2"
edition = "2024"

[dependencies]
sideswap_types = { path = "../sideswap_types" }

elements.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum_macros.workspace = true
