[package]
name = "sideswap_monitoring"
version = "0.1.2"
edition = "2024"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }

anyhow.workspace = true
config.workspace = true
log.workspace = true
log4rs.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
