[package]
name = "sideswap_payjoin"
version = "0.1.2"
edition = "2024"

[dependencies]
sideswap_common = { path = "../sideswap_common" }
sideswap_types = { path = "../sideswap_types" }

anyhow.workspace = true
base64.workspace = true
elements.workspace = true
rand.workspace = true
serde.workspace = true
ureq.workspace = true
