[package]
name = "sideswap_sdk_rust"
version = "0.1.2"
edition = "2024"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_types = { path = "../sideswap_types" }

anyhow.workspace = true
base64.workspace = true
bip39.workspace = true
elements.workspace = true
hex.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
